--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
           <link type="text/css" rel="stylesheet" href="style.css"/>
           <script type="text/javascript" src="main.js"></script>
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+          <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
           <script src="jquery-1.12.2.min.js"></script>
           
 <tittle></tittle>
